@@ -339,7 +339,7 @@ CONFIG_BOARD_INITIALIZE=y
 CONFIG_MSEC_PER_TICK=10
 CONFIG_RR_INTERVAL=200
 # CONFIG_SCHED_INSTRUMENTATION is not set
-CONFIG_TASK_NAME_SIZE=0
+CONFIG_TASK_NAME_SIZE=8
 # CONFIG_SCHED_HAVE_PARENT is not set
 # CONFIG_JULIAN_TIME is not set
 CONFIG_START_YEAR=2009
@@ -385,9 +385,9 @@ CONFIG_PREALLOC_TIMERS=4
 # Stack and heap information
 #
 CONFIG_IDLETHREAD_STACKSIZE=512
-CONFIG_USERMAIN_STACKSIZE=600
+CONFIG_USERMAIN_STACKSIZE=680
 CONFIG_PTHREAD_STACK_MIN=256
-CONFIG_PTHREAD_STACK_DEFAULT=512
+CONFIG_PTHREAD_STACK_DEFAULT=640
 
 #
 # Device Drivers
@@ -466,8 +466,8 @@ CONFIG_USART2_SERIAL_CONSOLE=y
 #
 # USART2 Configuration
 #
-CONFIG_USART2_RXBUFSIZE=256
-CONFIG_USART2_TXBUFSIZE=256
+CONFIG_USART2_RXBUFSIZE=64
+CONFIG_USART2_TXBUFSIZE=128
 CONFIG_USART2_BAUD=115200
 CONFIG_USART2_BITS=8
 CONFIG_USART2_PARITY=0
